--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest-extended": "2.0.0",
     "jest-when": "^3.5.1",
     "lodash": "4.17.21",
+    "minimist": ">=1.2.6",
     "nock": "13.2.4",
     "nodemon": "2.0.15",
     "prettier": "2.4.0",
